2010-05-03  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43972
	* config/i386/i386.c (ix86_delegitimize_address): Make sure the
	result mode matches original rtl mode.

2010-04-30  Jakub Jelinek  <jakub@redhat.com>

	PR c/43893
	* c-omp.c (c_finish_omp_for): Handle also EQ_EXPR.

2010-04-29  Jakub Jelinek  <jakub@redhat.com>

	* BASE-VER: Set to 4.4.5.
	* DEV-PHASE: Set to prerelease.

2010-04-29  Release Manager

	* GCC 4.4.4 released.

2010-04-30  Richard Guenther  <rguenther@suse.de>

	* builtins.c (fold_builtin_1): Delete free (0).

2010-04-29  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/43921
	* config/i386/i386.c (get_some_local_dynamic_name): Replace
	INSN_P with NONDEBUG_INSN_P.
	(distance_non_agu_define): Likewise.
	(distance_agu_use): Likewise.

2010-04-27  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (def_cfa_1): After DW_CFA_def_cfa_expression
	force using DW_CFA_def_cfa instead of DW_CFA_def_cfa_register
	or DW_CFA_def_cfa_offset{,_sf}.

2010-03-30  Joseph Myers  <joseph@codesourcery.com>

	PR other/25232
	* libgcc-std.ver (GCC_4.5.0): Define version.  Include __unordxf2
	and __unordtf2.
	* config/i386/libgcc-glibc.ver: Do not define inheritance from
	GCC_4.4.0 here.

2010-03-18  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/libgcc-glibc.ver: Make GCC_4.5.0 inherit GCC_4.4.0.

2010-03-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/43383
	* config/i386/libgcc-glibc.ver: Add __extendxftf2 to GCC_4.5.0
	for 32bit.

2010-03-23  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/43413
	* ira-color.c (setup_allocno_available_regs_num): Count prohibited
	hard regs too.

2010-03-12  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR middle-end/42431
	* gcc/config/rs6000/rs6000.c (rs6000_emit_move): Delete band-aid
	code added to work around reload clobbering CONST insns.

2010-03-02  Jeff Law  <law@redhat.com>

	PR middle-end/42431
	* reload1.c (rtx_p, substitute_stack): Declare.
	(substitute): Record addresses of changed rtxs.